// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DynamicRenderer renders images consistently 1`] = `
<div
  className="Markdown-Wrapper"
>
  <a
    className="BackLink"
    href="/documentation/2019"
    onClick={[Function]}
  >
    ⬅
     
    2019
     DOCUMENTATION
  </a>
  <div
    className="LoadingIconWrapper"
  >
    <div
      className="LoadingIcon"
    />
  </div>
</div>
`;

exports[`DynamicRenderer renders lists consistently 1`] = `
<div
  className="Markdown-Wrapper"
>
  <a
    className="BackLink"
    href="/documentation/2018"
    onClick={[Function]}
  >
    ⬅
     
    2018
     DOCUMENTATION
  </a>
  <div
    className="LoadingIconWrapper"
  >
    <div
      className="LoadingIcon"
    />
  </div>
</div>
`;

exports[`DynamicRenderer renders plain text consistently 1`] = `
<div
  className="Markdown-Wrapper"
>
  <a
    className="BackLink"
    href="/documentation/2018"
    onClick={[Function]}
  >
    ⬅
     
    2018
     DOCUMENTATION
  </a>
  <div
    className="LoadingIconWrapper"
  >
    <div
      className="LoadingIcon"
    />
  </div>
</div>
`;

exports[`DynamicRenderer renders tables consistently 1`] = `
<div
  className="Markdown-Wrapper"
>
  <a
    className="BackLink"
    href="/documentation/2018"
    onClick={[Function]}
  >
    ⬅
     
    2018
     DOCUMENTATION
  </a>
  <div
    className="LoadingIconWrapper"
  >
    <div
      className="LoadingIcon"
    />
  </div>
</div>
`;
